--- a/index.html
+++ b/index.html
@@ -16,7 +16,22 @@
         <p>
             Click the button below to add a new task!
         </p>
-        <button class="btn" id="save-task">Add Task</button>
+        <form id="taks-form">
+            <div class="form-group">
+                <input type="text" name="task-name" placeholder="Enter Task Name" />
+            </div>
+            <div class="form-group">
+                <select name="task-type" class="select-dropdown">
+                    <option value="" disabled selected>Pick a task type</option>
+                    <option value="Print">Print</option>
+                    <option value="Web">Web</option>
+                    <option value="Mobile">Mobile</option>
+                </select>
+            </div>
+            <div class="form-group">
+            <button class="btn" id="save-task">Add Task</button>
+            </div>
+        </form>
     </header>
     <main class="page-content">
         <section class="task-list-wrapper">
@@ -24,9 +39,7 @@
                 Tasks To Do
             </h2>
             <ul class="task-list" id="tasks-to-do">
-                <li class="task-item">
-                    A task wil be added soon!
-                </li>
+
             </ul>
         </section>
     </main>
