--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p>
             Click the button below to add a new task!
         </p>
-        <form id="taks-form">
+        <form id="task-form">
             <div class="form-group">
                 <input type="text" name="task-name" placeholder="Enter Task Name" />
             </div>
@@ -29,7 +29,7 @@
                 </select>
             </div>
             <div class="form-group">
-            <button class="btn" id="save-task">Add Task</button>
+            <button class="btn" id="save-task" type="submit">Add Task</button>
             </div>
         </form>
     </header>
